--- a/reg.html
+++ b/reg.html
@@ -18,6 +18,10 @@
                 <td><input type="text" placeholder="Enter user here" id="t1" class="tb" /></td>
             </tr>
             <tr>
+                <td align="right">Enter Name :</td>
+                <td><input type="text" placeholder="Enter user here" id="t1" class="tb" /></td>
+            </tr>
+            <tr>
                 <td align="right">Enter Email ID :</td>
                 <td><input type="text" placeholder="Enter Email ID here" id="t2" class="tb" /></td>
             </tr>
