--- a/reg.html
+++ b/reg.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Welcome To Registration Form</title>
+    <link rel="stylesheet prefetch" href="reg.css">
+    <script src="https://use.fontawesome.com/86b0855254.js"></script>
 </head>
 
 <body>
@@ -17,11 +19,7 @@
                 <td align="right">Enter Name :</td>
                 <td><input type="text" placeholder="Enter user here" id="t1" class="tb" /></td>
             </tr>
-            <tr>
-                <td align="right">Enter Name :</td>
-                <td><input type="text" placeholder="Enter user here" id="t1" class="tb" /></td>
-            </tr>
-            <tr>
+        <tr>
                 <td align="right">Enter Email ID :</td>
                 <td><input type="text" placeholder="Enter Email ID here" id="t2" class="tb" /></td>
             </tr>
@@ -44,42 +42,51 @@
                     <input type="submit" value="Create Account" class="btn" onclick="registration()" /></td>
             </tr>
         </table>
+        
     </div>
     <!-- create account box ending here.. -->
+
+    <div class="profile-footer">
+    <!-- Footer div starting here.. -->    
+        <ul class="social">
+          <li>
+            <a class="fb" href="https://www.facebook.com" target="_blank">
+              <i class="fa fa-facebook"></i>
+            </a>
+          </li>
+          <li>
+            <a class="twitter" href="https://www.twitter.com" target="_blank">
+              <i class="fa fa-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a class="linkedin" href="https://www.linkedin.com/" target="_blank">
+              <i class="fa fa-linkedin"></i>
+            </a>
+          </li>
+          <li>
+            <a class="google" href="https://plus.google.com/" target="_blank">
+              <i class="fa fa-google-plus"></i>
+            </a>
+          </li>
+          <li>
+            <a class="youtube" href="https://www.youtube.com" target="_blank">
+              <i class="fa fa-youtube"></i>
+            </a>
+          </li>
+          <li>
+            <a class="insta" href="https://www.instagram.com" target="_blank">
+              <i class="fa fa-instagram"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- Footer div ending here... -->
+    
 </div>
 <!-- Main div ending here... -->
+
 </body>
-<style>
-    body
-    {
-        margin:0px;
-        background-color:#f26724;
-        background-image:url(image/background.jpg);
-        color:#f9fcf5;
-        font-family:Arial, Helvetica, sans-serif;
-    }
-
-    #main{width:600px; height:auto; overflow:hidden; padding-bottom:20px; margin-left:auto; margin-right:auto;
-        border-radius:5px; padding-left:10px; margin-top:100px; border-top:3px double #f1f1f1;
-        border-bottom:3px double #f1f1f1;border-left:3px double #f1f1f1;border-right:3px double #f1f1f1; padding-top:20px;
-    }
-
-    #main table{font-family:"Comic Sans MS", cursive;}
-    /* css code for textbox */
-    #main .tb{height:28px; width:230px; border:1px solid #f26724; color:#fd7838; font-weight:bold; border-left:5px solid #f7f7f7; opacity:0.9;}
-
-    #main .tb:focus{height:28px; border:1px solid #f26724; outline:none; border-left:5px solid #f7f7f7;}
-
-    /* css code for button*/
-    #main .btn{width:150px; height:32px; outline:none;  color:#f7f7f7; font-weight:bold; border:0px solid #f26724;
-        text-shadow: 0px 0.5px 0.5px #fff; border-radius: 2px; font-weight: 600; color: #f26724; letter-spacing: 1px;
-        font-size:14px; background-color:#f1f1f1; -webkit-transition: 1s; -moz-transition: 1s; transition: 1s;}
-
-    #main .btn:hover{background-color:#f26724; outline:none;  border-radius: 2px; color:#f1f1f1; border:1px solid #f1f1f1;
-        -webkit-transition: 1s; -moz-transition: 1s; transition: 1s; }
-</style>
-
-
 <script>
     function registration()
     {
@@ -145,9 +152,9 @@
         }
         else
         {
-            alert('Thank You for Login & You are Redirecting to Campuslife Website');
+            alert('Thank You for the Login Details --- You are Hacked 😂😂😂 ');
             // Redirecting to other page or webste code.
-            window.location = "http://www.campuslife.co.in";
+            //window.location = "";
         }
     }
     function clearFunc()
